--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="icon" type="image/png" href="/assets/favicon.png">
+    <!-- <link rel="icon" type="image/png" href="/assets/favicon.png"> -->
     <title>Forum</title>
 </head>
 <body>
 
-<nav class="nav">
+<!-- <nav class="nav">
     <div class="nav-left">
         <a href="/"><span class="material-symbols-outlined" style="font-size: 40px">home</span></a>
     </div>
@@ -24,5 +24,5 @@
             <button class="login-button" onclick="window.location.href='/login';">Log In</button>
         {{end}}
     </div>
-</nav>
+</nav> -->
 </body>
