--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="./assets/styles.css">
     <!-- <link rel="icon" type="image/png" href="/assets/favicon.png"> -->
     <title>Forum</title>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>grit:garden</h1>
+            <h1>grit:forum</h1>
         </header>
         <main>
             <!-- Button to toggle filter visibility -->
