--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Forum</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
-    <!-- <style>
+    <style>
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
@@ -89,7 +89,7 @@
         }
         .likes { color: #4CAF50; }
         .dislikes { color: #f44336; }
-    </style> -->
+    </style>
 </head>
 <body>
     <!-- nav bar -->
