somewhat working signup

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     </style>
 </head>
 <body>
+
     <!-- nav bar -->
     <nav class="nav">
         <div class="nav-left">
@@ -104,6 +105,9 @@
             </form>
         </div>
     </nav>
+    <div id="content">
+        <button id="signup-button">Sign Up</button>
+    </div>
     
     <!-- dynamic forum -->
     <div id="posts-container">
@@ -111,5 +115,7 @@
     </div>
     
     <script src="/scripts.js"></script>
+    <script src="/signup.js"></script>
+
 </body>
 </html>
