--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     
     <script src="/scripts.js"></script>
     <script src="/signup.js"></script>
+    <script src="/login.js"></script>
 
 </body>
 </html> 
