fixed login/signup on this branch, feed not implemented

--- a/index.html
+++ b/index.html
@@ -109,13 +109,16 @@
         <button id="signup-button">Sign Up</button>
     </div>
     
+    <div> <button id="create-post-btn">Create Post</button></div>
     <!-- dynamic forum -->
     <div id="posts-container">
         <!-- Posts will be inserted here dynamically -->
     </div>
     
-    <script src="/scripts.js"></script>
-    <script src="/signup.js"></script>
+    <script src="/js/scripts.js"></script>
+    <script src="/js/signup.js"></script>
+    <script src="/js/login.js"></script>
+
 
 </body>
 </html>
