--- a/index.html
+++ b/index.html
@@ -99,10 +99,8 @@
             <a href="/"><span class="material-symbols-outlined" style="font-size: 40px">home</span></a>
         </div>
         <div class="nav-right">
-            <p class="welcome-text">Logged in as: <strong>admin</strong></p>
-            <form action="/logout" method="POST">
-                <button type="submit" class="logout-button">Log Out</button>
-            </form>
+            <p class="welcome-text">Logged in as: {{.User}}</p>
+                <button type="submit" id="logout-button">Log Out</button>
         </div>
     </nav>
     <div id="content">
@@ -118,6 +116,8 @@
     <script src="/js/scripts.js"></script>
     <script src="/js/signup.js"></script>
     <script src="/js/login.js"></script>
+    <script src="/js/logout.js"></script>
+
 
 
 </body>
