login button added to home

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     </nav>
     <div id="content">
         <button id="signup-button">Sign Up</button>
+        <button id="login-button">Log In</button>
     </div>
     
     <div> <button id="create-post-btn">Create Post</button></div>
