--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
     </nav>
     <div id="content">
-        <button id="signup-button">Sign Up</button>
+        <!-- <button id="signup-button">Sign Up</button> -->
         <button id="login-button">Log In</button>
     </div>
     
@@ -138,7 +138,6 @@
     <script src="/js/signup.js"></script>
     <script src="/js/login.js"></script>
     <script src="/js/logout.js"></script>
-
 
 
 </body>
