--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </nav>
     <div id="content">
         <!-- <button id="signup-button">Sign Up</button> -->
-        <button id="login-button">Log In</button>
+        <!-- <button id="login-button">Log In</button> -->
     </div>
     
     <div> <button id="create-post-btn">Create Post</button></div>
