--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                 <button type="submit" id="logout-button">Log Out</button>
         </div>
     </nav>
+    
+    <!-- Placeholder for login signup content -->
     <div id="content">
-        <!-- <button id="signup-button">Sign Up</button> -->
-        <!-- <button id="login-button">Log In</button> -->
     </div>
     
     <div> <button id="create-post-btn">Create Post</button></div>
