moved logic for create button

--- a/index.html
+++ b/index.html
@@ -121,15 +121,10 @@
         </div>
     </nav>
     
-    <!-- Placeholder for login signup content -->
+    <!-- Placeholder for dynamic content -->
     <div id="content">
     </div>
     
-    <div> <button id="create-post-btn">Create Post</button></div>
-    <!-- dynamic forum -->
-    <div id="posts-container">
-        <!-- Posts will be inserted here dynamically -->
-    </div>
 
     <!-- post pop up -->
     <div id="create-post-popup" class="popup hidden"></div>
