added chat window

--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
             <!-- Active users will be dynamically inserted here -->
         </ul>
     </div>
-    
+    <div id="chat-window" style="display: none;"></div>
+
     <script src="/js/scripts.js"></script>
     <script src="/js/signup.js"></script>
     <script src="/js/login.js"></script>
