chat kinda works

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     <div id="chat-window" style="display: none;"></div>
 
     <script src="/js/scripts.js"></script>
+    <script src="/js/chat.js"></script>
     <script src="/js/signup.js"></script>
     <script src="/js/login.js"></script>
     <script src="/js/logout.js"></script>
