--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             padding: 16px;
             margin-bottom: 16px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-left: auto;
+            margin-right: auto;
         }
         .post-header {
             display: flex;
