showing all users

--- a/index.html
+++ b/index.html
@@ -169,15 +169,17 @@
     <!-- post pop up -->
     <div id="create-post-popup" class="popup hidden"></div>
     <div class="active-users">
-        <h3>Active Users</h3>
-        <ul id="active-users-list" class="user-list">
+        <h3>Users</h3>
+        <button id="minimize-users" style="float: right; font-size: 14px;">-</button>
+        <ul id="users-list" class="user-list">
             <!-- Active users will be dynamically inserted here -->
         </ul>
     </div>
     <div id="chat-window" style="display: none;"></div>
-
-    <script src="/js/scripts.js"></script>
+    
+    <!-- <script src="/js/user.js"></script> -->
     <script src="/js/chat.js"></script>
+    <script src="/js/scripts.js"></script>
     <script src="/js/signup.js"></script>
     <script src="/js/login.js"></script>
     <script src="/js/logout.js"></script>
