users should be displayed correctly

--- a/index.html
+++ b/index.html
@@ -32,14 +32,7 @@
         <section class="posts-section" id="posts-container">
             <!-- Posts will be inserted here dynamically -->
         </section>
-        <aside class="sidebar">
-            <section class="active-users">
-                <h3>Users</h3>
-                <ul id="users-list" class="user-list">
-                    <!-- Active users will be dynamically inserted here -->
-                </ul>
-            </section>
-        </aside>
+        <aside class="sidebar"></aside>
     </section>
         
     <!-- Sidebar with active users -->
