separated createpost logic

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script src="/js/chat.js" defer></script>
     <script src="/js/scripts.js" defer></script>
     <script src="/js/signup.js" defer></script>
+    <script src="/js/createpost.js" defer></script>
     <script src="/js/login.js" defer></script>
     <script src="/js/logout.js" defer></script>
 
