might be on the right track..

--- a/index.html
+++ b/index.html
@@ -41,11 +41,20 @@
     <section id="create-post-popup" class="popup hidden"></section>
     <section id="chat-window" style="display: none;"></section>
     
+    <!-- Modal Structure -->
+    <div id="post-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-modal" class="close-button">&times;</span>
+            <div id="post-details"></div>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script src="/js/chat.js" defer></script>
-    <script src="/js/scripts.js" defer></script>
+    <script src="/js/main.js" defer></script>
     <script src="/js/signup.js" defer></script>
     <script src="/js/createpost.js" defer></script>
+    <script src="/js/postmodal.js" defer></script>
     <script src="/js/login.js" defer></script>
     <script src="/js/logout.js" defer></script>
 
