--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <!-- post pop up -->
     <section id="create-post-popup" class="popup hidden"></section>
-    <section id="chat-window" style="display: none;"></section>
+    <!-- <section id="chat-window" style="display: none;"></section> -->
     
     <!-- Modal Structure -->
     <div id="post-modal" class="modal">
