--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
 <body>
 
     <!-- nav bar -->
-    <nav class="nav">
-        <div class="nav-left">
-            <a href="/"><span class="material-symbols-outlined" style="font-size: 40px">home</span></a>
-        </div>
-        <div class="nav-right">
-            <p class="welcome-text">Logged in as: <span id="username-placeholder">Guest</span></p>
-            <button type="submit" id="logout-button">Log Out</button>
-        </div>
-    </nav>
+   <section id="navbar"></section>
     
     <!-- Placeholder for dynamic content -->
     <section id="content"></section>
