testing some login styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
    <section id="navbar"></section>
     
     <!-- Placeholder for dynamic content -->
+    <section id="loginview"></section>
     <section id="content"></section>
+    <section id="postview"></section>
+
     
     <!-- Main container with posts and sidebar -->
     <section class="main-container">
