create post button now hidden on login

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
    <section id="navbar"></section>
     
     <!-- Placeholder for dynamic content -->
+    <section id="signupview"></section>
     <section id="loginview"></section>
     <section id="content"></section>
     <section id="postview"></section>
