--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Sidebar with active users -->
     
     <!-- post pop up -->
-    <section id="create-post-popup" class="popup hidden"></section>
+    <!-- <section id="create-post-popup" style="display: none"></section> -->
     <!-- <section id="chat-window" style="display: none;"></section> -->
     
     <!-- Modal Structure -->
